--- a/NoOneSpecial/102752-home-alone-and-relieving-a-lot-of-stress/rus.textile
+++ b/NoOneSpecial/102752-home-alone-and-relieving-a-lot-of-stress/rus.textile
@@ -1,108 +1,108 @@
-Один дома и снятие большого стресса
+РћРґРёРЅ РґРѕРјР° Рё СЃРЅСЏС‚РёРµ Р±РѕР»СЊС€РѕРіРѕ СЃС‚СЂРµСЃСЃР°
 
-Автор: NoOneSpecial
+РђРІС‚РѕСЂ: NoOneSpecial
 
 *000*2024-07-08 22:28
 
-Привет, ребята,
+РџСЂРёРІРµС‚, СЂРµР±СЏС‚Р°,
 
-Ещё одна история для вас всех, так как вам, похоже, понравилась предыдущая, которую я рассказал.
+Р•С‰С‘ РѕРґРЅР° РёСЃС‚РѕСЂРёСЏ РґР»СЏ РІР°СЃ РІСЃРµС…, С‚Р°Рє РєР°Рє РІР°Рј, РїРѕС…РѕР¶Рµ, РїРѕРЅСЂР°РІРёР»Р°СЃСЊ РїСЂРµРґС‹РґСѓС‰Р°СЏ, РєРѕС‚РѕСЂСѓСЋ СЏ СЂР°СЃСЃРєР°Р·Р°Р».
 
-Очень надеюсь, что вам понравится эта, так как это было совсем недавно. Это тот опыт, который я хотел получить целую вечность, и это было то, в чём я отчаянно нуждался; во многих отношениях.
+РћС‡РµРЅСЊ РЅР°РґРµСЋСЃСЊ, С‡С‚Рѕ РІР°Рј РїРѕРЅСЂР°РІРёС‚СЃСЏ СЌС‚Р°, С‚Р°Рє РєР°Рє СЌС‚Рѕ Р±С‹Р»Рѕ СЃРѕРІСЃРµРј РЅРµРґР°РІРЅРѕ. Р­С‚Рѕ С‚РѕС‚ РѕРїС‹С‚, РєРѕС‚РѕСЂС‹Р№ СЏ С…РѕС‚РµР» РїРѕР»СѓС‡РёС‚СЊ С†РµР»СѓСЋ РІРµС‡РЅРѕСЃС‚СЊ, Рё СЌС‚Рѕ Р±С‹Р»Рѕ С‚Рѕ, РІ С‡С‘Рј СЏ РѕС‚С‡Р°СЏРЅРЅРѕ РЅСѓР¶РґР°Р»СЃСЏ; РІРѕ РјРЅРѕРіРёС… РѕС‚РЅРѕС€РµРЅРёСЏС….
 
-В любом случае, ещё раз спасибо, вот история.
-
-###
-
-После того, как меня пригласили подать заявку на работу, которую я действительно хотел, и оба отказали мне, несмотря на приглашения. Я был так расстроен. Я всё ещё не понимал, как улучшить ситуацию, поскольку мне по-прежнему отказывали в любой форме обратной связи, и я часами работал над форматированием своего резюме и сопроводительного письма. Я даже попросил человека, который пригласил меня подать заявку, проверить их.
-
-Я был уставшим, напряжённым и в целом расстроенным.
-
-Я взял выходной. Я сделал несколько домашних дел, постирал и просто послушал один из моих любимых каналов на YouTube, чтобы заглушить боль.
-
-Ближе к вечеру один из моих родителей сообщил мне, что я буду дома один на ночь, так как мой брат и оба моих родителя уехали. Это также помогло мне, так как уединение, несмотря на мою природную экстраверсию, было именно тем, что мне сейчас было нужно.
-
-Мне нужна была тишина и просто залечить свои эмоциональные раны.
-
-К счастью, я поговорила с несколькими близкими друзьями по смс, чтобы отвлечься, и медленно, но верно я начала чувствовать себя немного лучше.
-
-Кроме того, я сняла джинсы и просто надела футболку с этими действительно красивыми тёмно-фиолетовыми трусами Calvin Klein. Честно говоря, я не выношу джинсы и хотела бы иметь более удобные варианты нижней части, которые выглядели бы хорошо, но у меня не было сил найти что-то другое. Поэтому я просто осталась в нижнем белье. В любом случае было весело находиться внизу полуголой.
-
-Однако я заметила, что, когда я прижималась к дивану и болтала с друзьями, я почувствовала потребность в туалете. Это было где-то 5/10 и определённо точка, когда я естественным образом пошла в туалет.
-
-Часть контекста, которая также может быть вам полезна:
-
-Для тех из вас, кто меня знает, мне требуется оооочень много времени, чтобы подняться до 5/10 с 0-1/10.
-
-ОДНАКО, время, которое мне требуется, чтобы перейти от 5/10 к 10/10, максимум 20 минут, минимум 5 минут.
-
-Я категорически проигнорировал это.
-
-Я всё ещё был в раздражённом настроении и был слишком удобен, чтобы действительно беспокоиться. Поэтому я продолжил смотреть свой любимый контент на YouTube, пока медленно доедал свой ужин и болтал с другом. Выпивая сидр, который, как я чувствовал, был честно заслужен, учитывая, что последний раз я пил алкоголь несколько месяцев назад.
-
-Прошло несколько часов, и сейчас около 11 вечера.
-
-В этот момент я действительно извивался. И я имею в виду ДЕЙСТВИТЕЛЬНО извивался.
-
-Как ни странно, мне удалось найти положение, в котором я мог сидеть в течение длительного времени, когда это чувство не беспокоило меня. Хотя я всё ещё чувствовал, что мой мочевой пузырь довольно полный, чувство позыва, которое часто сопровождает его, казалось, просто не проявлялось.
-
-Однако я устал и понял, что мне ещё нужно было изрядно помыть посуду.
-
-Я встал.
-
-Сначала он медленно возвращался, а потом всё сразу. В тот момент я пролил каплю или две.
-
-Я извивался и суетился по кухне, торопливо загружая и выгружая посудомоечную машину и убирая вещи. Спохватившись и схватившись за пах, умоляя не идти! Мне действительно не хотелось мыть полы, а потом беспокоиться о возможных пятнах на плитке.
-
-К счастью, наконец-то я закончил уборку. Я отчаянно возился с выключателями, пытаясь выключить все огни, я бегал вокруг, запирая все двери, пролив ещё одну или около того каплю, когда пытался запереть двери.
-
-Затем я бежал, держась за пах, всю дорогу вверх по лестнице.
-
-Я был выше 10/10.
-
-Я не думал, я схватил два полотенца, сложил их так быстро, как только мог, и бросил на кровать.
-
-Я сорвал с себя слегка влажные трусы и наклонился над полотенцами по-собачьи, задрав зад в воздух и отчаянно удерживая…
-
-… Я полностью потерялся.
-
-Прямо в полотенца. Через 8 слоёв махровой ткани и даже немного в простыни. Я медленно потёр себя взад и вперёд, чувствуя, как тёплая моча вытекает и плещется в полотенца, используя немного её, чтобы смазать себя.
-
-Я продержался, как мне показалось, целых 2 минуты. Целых 120 секунд. Это был один из тех случаев, когда она просто продолжала вытекать, даже если вы могли подумать, что закончили.
-
-Я не был так возбуждён месяцами или даже годами.
-
-Сначала я медленно и нежно начал мастурбировать. Затем я позволил своей смазанной коже и пальцам быстро, но всё ещё нежно, скользить по моей головке, чтобы максимизировать ощущения. Мой пресс сильно напрягался с каждым несколькими толчками.
-
-Никаких видео. Никакого звука. Ничего.
-
-Пустой дом… ничего, кроме меня и моих стонов…
-
-Обычно я не стону слишком много. Я делаю немного, но почти ничего чрезмерного.
-
-Но в этот раз… о, я это сделал.
-
-Всё ещё находясь в позе догги-стайл, Джей быстро схватил подушку передо мной, я был так близко. Я продолжал и продолжал. Весь стресс, все трудности в сочетании с огромной потребностью в этом моменте -
-
-Я кончил… так сильно. Прямо в те же полотенца.
-
-Я стонал так громко, что уткнулся лицом в подушку, быстро дыша, а моё сердце колотилось.
-
-Я чувствовал, что в каком-то смысле я рухнул.
-
-Мне это было отчаянно нужно.
-
-Всё… это.
-
-Затем я быстро сменила простыни (я вообще-то планировала это сделать), положила всё в стиральную машину и легла спать… время от времени размышляя о прекрасной пустоте, которую я чувствовала физиологически.
+Р’ Р»СЋР±РѕРј СЃР»СѓС‡Р°Рµ, РµС‰С‘ СЂР°Р· СЃРїР°СЃРёР±Рѕ, РІРѕС‚ РёСЃС‚РѕСЂРёСЏ.
 
 ###
 
-Надеюсь, вам понравилось это читать. Я надеюсь, что вы всё вынесете из этого, несмотря на прекрасное время (вы понимаете, о чём я), что нужно заботиться о себе. Жизнь может быть очень тяжёлой, и, честно говоря, возможность позволить себе вернуться к тому, что заставляет вас чувствовать себя хорошо, может быть очень полезна для вашего здоровья.
+РџРѕСЃР»Рµ С‚РѕРіРѕ, РєР°Рє РјРµРЅСЏ РїСЂРёРіР»Р°СЃРёР»Рё РїРѕРґР°С‚СЊ Р·Р°СЏРІРєСѓ РЅР° СЂР°Р±РѕС‚Сѓ, РєРѕС‚РѕСЂСѓСЋ СЏ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ С…РѕС‚РµР», Рё РѕР±Р° РѕС‚РєР°Р·Р°Р»Рё РјРЅРµ, РЅРµСЃРјРѕС‚СЂСЏ РЅР° РїСЂРёРіР»Р°С€РµРЅРёСЏ. РЇ Р±С‹Р» С‚Р°Рє СЂР°СЃСЃС‚СЂРѕРµРЅ. РЇ РІСЃС‘ РµС‰С‘ РЅРµ РїРѕРЅРёРјР°Р», РєР°Рє СѓР»СѓС‡С€РёС‚СЊ СЃРёС‚СѓР°С†РёСЋ, РїРѕСЃРєРѕР»СЊРєСѓ РјРЅРµ РїРѕ-РїСЂРµР¶РЅРµРјСѓ РѕС‚РєР°Р·С‹РІР°Р»Рё РІ Р»СЋР±РѕР№ С„РѕСЂРјРµ РѕР±СЂР°С‚РЅРѕР№ СЃРІСЏР·Рё, Рё СЏ С‡Р°СЃР°РјРё СЂР°Р±РѕС‚Р°Р» РЅР°Рґ С„РѕСЂРјР°С‚РёСЂРѕРІР°РЅРёРµРј СЃРІРѕРµРіРѕ СЂРµР·СЋРјРµ Рё СЃРѕРїСЂРѕРІРѕРґРёС‚РµР»СЊРЅРѕРіРѕ РїРёСЃСЊРјР°. РЇ РґР°Р¶Рµ РїРѕРїСЂРѕСЃРёР» С‡РµР»РѕРІРµРєР°, РєРѕС‚РѕСЂС‹Р№ РїСЂРёРіР»Р°СЃРёР» РјРµРЅСЏ РїРѕРґР°С‚СЊ Р·Р°СЏРІРєСѓ, РїСЂРѕРІРµСЂРёС‚СЊ РёС….
 
-1 шаг назад, чтобы сделать 2 шага вперёд.
+РЇ Р±С‹Р» СѓСЃС‚Р°РІС€РёРј, РЅР°РїСЂСЏР¶С‘РЅРЅС‹Рј Рё РІ С†РµР»РѕРј СЂР°СЃСЃС‚СЂРѕРµРЅРЅС‹Рј.
 
-Надеюсь, у вас будет прекрасный день, и я надеюсь, что скоро напишу для вас ещё одну историю. Пожалуйста, если у вас есть какие-то идеи, которые я могу попробовать (и потом продолжить пис%ть), пожалуйста, дайте мне знать. Я всегда ищу способы усилить свои переживания омо. Материалы в духе того, что я уже напис%ла, дадут вам представление о том, что мне нравится.
+РЇ РІР·СЏР» РІС‹С…РѕРґРЅРѕР№. РЇ СЃРґРµР»Р°Р» РЅРµСЃРєРѕР»СЊРєРѕ РґРѕРјР°С€РЅРёС… РґРµР», РїРѕСЃС‚РёСЂР°Р» Рё РїСЂРѕСЃС‚Рѕ РїРѕСЃР»СѓС€Р°Р» РѕРґРёРЅ РёР· РјРѕРёС… Р»СЋР±РёРјС‹С… РєР°РЅР°Р»РѕРІ РЅР° YouTube, С‡С‚РѕР±С‹ Р·Р°РіР»СѓС€РёС‚СЊ Р±РѕР»СЊ.
 
-До следующего раза, ребята ??
+Р‘Р»РёР¶Рµ Рє РІРµС‡РµСЂСѓ РѕРґРёРЅ РёР· РјРѕРёС… СЂРѕРґРёС‚РµР»РµР№ СЃРѕРѕР±С‰РёР» РјРЅРµ, С‡С‚Рѕ СЏ Р±СѓРґСѓ РґРѕРјР° РѕРґРёРЅ РЅР° РЅРѕС‡СЊ, С‚Р°Рє РєР°Рє РјРѕР№ Р±СЂР°С‚ Рё РѕР±Р° РјРѕРёС… СЂРѕРґРёС‚РµР»СЏ СѓРµС…Р°Р»Рё. Р­С‚Рѕ С‚Р°РєР¶Рµ РїРѕРјРѕРіР»Рѕ РјРЅРµ, С‚Р°Рє РєР°Рє СѓРµРґРёРЅРµРЅРёРµ, РЅРµСЃРјРѕС‚СЂСЏ РЅР° РјРѕСЋ РїСЂРёСЂРѕРґРЅСѓСЋ СЌРєСЃС‚СЂР°РІРµСЂСЃРёСЋ, Р±С‹Р»Рѕ РёРјРµРЅРЅРѕ С‚РµРј, С‡С‚Рѕ РјРЅРµ СЃРµР№С‡Р°СЃ Р±С‹Р»Рѕ РЅСѓР¶РЅРѕ.
+
+РњРЅРµ РЅСѓР¶РЅР° Р±С‹Р»Р° С‚РёС€РёРЅР° Рё РїСЂРѕСЃС‚Рѕ Р·Р°Р»РµС‡РёС‚СЊ СЃРІРѕРё СЌРјРѕС†РёРѕРЅР°Р»СЊРЅС‹Рµ СЂР°РЅС‹.
+
+Рљ СЃС‡Р°СЃС‚СЊСЋ, СЏ РїРѕРіРѕРІРѕСЂРёР»Р° СЃ РЅРµСЃРєРѕР»СЊРєРёРјРё Р±Р»РёР·РєРёРјРё РґСЂСѓР·СЊСЏРјРё РїРѕ СЃРјСЃ, С‡С‚РѕР±С‹ РѕС‚РІР»РµС‡СЊСЃСЏ, Рё РјРµРґР»РµРЅРЅРѕ, РЅРѕ РІРµСЂРЅРѕ СЏ РЅР°С‡Р°Р»Р° С‡СѓРІСЃС‚РІРѕРІР°С‚СЊ СЃРµР±СЏ РЅРµРјРЅРѕРіРѕ Р»СѓС‡С€Рµ.
+
+РљСЂРѕРјРµ С‚РѕРіРѕ, СЏ СЃРЅСЏР»Р° РґР¶РёРЅСЃС‹ Рё РїСЂРѕСЃС‚Рѕ РЅР°РґРµР»Р° С„СѓС‚Р±РѕР»РєСѓ СЃ СЌС‚РёРјРё РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ РєСЂР°СЃРёРІС‹РјРё С‚С‘РјРЅРѕ-С„РёРѕР»РµС‚РѕРІС‹РјРё С‚СЂСѓСЃР°РјРё Calvin Klein. Р§РµСЃС‚РЅРѕ РіРѕРІРѕСЂСЏ, СЏ РЅРµ РІС‹РЅРѕС€Сѓ РґР¶РёРЅСЃС‹ Рё С…РѕС‚РµР»Р° Р±С‹ РёРјРµС‚СЊ Р±РѕР»РµРµ СѓРґРѕР±РЅС‹Рµ РІР°СЂРёР°РЅС‚С‹ РЅРёР¶РЅРµР№ С‡Р°СЃС‚Рё, РєРѕС‚РѕСЂС‹Рµ РІС‹РіР»СЏРґРµР»Рё Р±С‹ С…РѕСЂРѕС€Рѕ, РЅРѕ Сѓ РјРµРЅСЏ РЅРµ Р±С‹Р»Рѕ СЃРёР» РЅР°Р№С‚Рё С‡С‚Рѕ-С‚Рѕ РґСЂСѓРіРѕРµ. РџРѕСЌС‚РѕРјСѓ СЏ РїСЂРѕСЃС‚Рѕ РѕСЃС‚Р°Р»Р°СЃСЊ РІ РЅРёР¶РЅРµРј Р±РµР»СЊРµ. Р’ Р»СЋР±РѕРј СЃР»СѓС‡Р°Рµ Р±С‹Р»Рѕ РІРµСЃРµР»Рѕ РЅР°С…РѕРґРёС‚СЊСЃСЏ РІРЅРёР·Сѓ РїРѕР»СѓРіРѕР»РѕР№.
+
+РћРґРЅР°РєРѕ СЏ Р·Р°РјРµС‚РёР»Р°, С‡С‚Рѕ, РєРѕРіРґР° СЏ РїСЂРёР¶РёРјР°Р»Р°СЃСЊ Рє РґРёРІР°РЅСѓ Рё Р±РѕР»С‚Р°Р»Р° СЃ РґСЂСѓР·СЊСЏРјРё, СЏ РїРѕС‡СѓРІСЃС‚РІРѕРІР°Р»Р° РїРѕС‚СЂРµР±РЅРѕСЃС‚СЊ РІ С‚СѓР°Р»РµС‚Рµ. Р­С‚Рѕ Р±С‹Р»Рѕ РіРґРµ-С‚Рѕ 5/10 Рё РѕРїСЂРµРґРµР»С‘РЅРЅРѕ С‚РѕС‡РєР°, РєРѕРіРґР° СЏ РµСЃС‚РµСЃС‚РІРµРЅРЅС‹Рј РѕР±СЂР°Р·РѕРј РїРѕС€Р»Р° РІ С‚СѓР°Р»РµС‚.
+
+Р§Р°СЃС‚СЊ РєРѕРЅС‚РµРєСЃС‚Р°, РєРѕС‚РѕСЂР°СЏ С‚Р°РєР¶Рµ РјРѕР¶РµС‚ Р±С‹С‚СЊ РІР°Рј РїРѕР»РµР·РЅР°:
+
+Р”Р»СЏ С‚РµС… РёР· РІР°СЃ, РєС‚Рѕ РјРµРЅСЏ Р·РЅР°РµС‚, РјРЅРµ С‚СЂРµР±СѓРµС‚СЃСЏ РѕРѕРѕРѕС‡РµРЅСЊ РјРЅРѕРіРѕ РІСЂРµРјРµРЅРё, С‡С‚РѕР±С‹ РїРѕРґРЅСЏС‚СЊСЃСЏ РґРѕ 5/10 СЃ 0-1/10.
+
+РћР”РќРђРљРћ, РІСЂРµРјСЏ, РєРѕС‚РѕСЂРѕРµ РјРЅРµ С‚СЂРµР±СѓРµС‚СЃСЏ, С‡С‚РѕР±С‹ РїРµСЂРµР№С‚Рё РѕС‚ 5/10 Рє 10/10, РјР°РєСЃРёРјСѓРј 20 РјРёРЅСѓС‚, РјРёРЅРёРјСѓРј 5 РјРёРЅСѓС‚.
+
+РЇ РєР°С‚РµРіРѕСЂРёС‡РµСЃРєРё РїСЂРѕРёРіРЅРѕСЂРёСЂРѕРІР°Р» СЌС‚Рѕ.
+
+РЇ РІСЃС‘ РµС‰С‘ Р±С‹Р» РІ СЂР°Р·РґСЂР°Р¶С‘РЅРЅРѕРј РЅР°СЃС‚СЂРѕРµРЅРёРё Рё Р±С‹Р» СЃР»РёС€РєРѕРј СѓРґРѕР±РµРЅ, С‡С‚РѕР±С‹ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ Р±РµСЃРїРѕРєРѕРёС‚СЊСЃСЏ. РџРѕСЌС‚РѕРјСѓ СЏ РїСЂРѕРґРѕР»Р¶РёР» СЃРјРѕС‚СЂРµС‚СЊ СЃРІРѕР№ Р»СЋР±РёРјС‹Р№ РєРѕРЅС‚РµРЅС‚ РЅР° YouTube, РїРѕРєР° РјРµРґР»РµРЅРЅРѕ РґРѕРµРґР°Р» СЃРІРѕР№ СѓР¶РёРЅ Рё Р±РѕР»С‚Р°Р» СЃ РґСЂСѓРіРѕРј. Р’С‹РїРёРІР°СЏ СЃРёРґСЂ, РєРѕС‚РѕСЂС‹Р№, РєР°Рє СЏ С‡СѓРІСЃС‚РІРѕРІР°Р», Р±С‹Р» С‡РµСЃС‚РЅРѕ Р·Р°СЃР»СѓР¶РµРЅ, СѓС‡РёС‚С‹РІР°СЏ, С‡С‚Рѕ РїРѕСЃР»РµРґРЅРёР№ СЂР°Р· СЏ РїРёР» Р°Р»РєРѕРіРѕР»СЊ РЅРµСЃРєРѕР»СЊРєРѕ РјРµСЃСЏС†РµРІ РЅР°Р·Р°Рґ.
+
+РџСЂРѕС€Р»Рѕ РЅРµСЃРєРѕР»СЊРєРѕ С‡Р°СЃРѕРІ, Рё СЃРµР№С‡Р°СЃ РѕРєРѕР»Рѕ 11 РІРµС‡РµСЂР°.
+
+Р’ СЌС‚РѕС‚ РјРѕРјРµРЅС‚ СЏ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ РёР·РІРёРІР°Р»СЃСЏ. Р СЏ РёРјРµСЋ РІ РІРёРґСѓ Р”Р•Р™РЎРўР’РРўР•Р›Р¬РќРћ РёР·РІРёРІР°Р»СЃСЏ.
+
+РљР°Рє РЅРё СЃС‚СЂР°РЅРЅРѕ, РјРЅРµ СѓРґР°Р»РѕСЃСЊ РЅР°Р№С‚Рё РїРѕР»РѕР¶РµРЅРёРµ, РІ РєРѕС‚РѕСЂРѕРј СЏ РјРѕРі СЃРёРґРµС‚СЊ РІ С‚РµС‡РµРЅРёРµ РґР»РёС‚РµР»СЊРЅРѕРіРѕ РІСЂРµРјРµРЅРё, РєРѕРіРґР° СЌС‚Рѕ С‡СѓРІСЃС‚РІРѕ РЅРµ Р±РµСЃРїРѕРєРѕРёР»Рѕ РјРµРЅСЏ. РҐРѕС‚СЏ СЏ РІСЃС‘ РµС‰С‘ С‡СѓРІСЃС‚РІРѕРІР°Р», С‡С‚Рѕ РјРѕР№ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ РґРѕРІРѕР»СЊРЅРѕ РїРѕР»РЅС‹Р№, С‡СѓРІСЃС‚РІРѕ РїРѕР·С‹РІР°, РєРѕС‚РѕСЂРѕРµ С‡Р°СЃС‚Рѕ СЃРѕРїСЂРѕРІРѕР¶РґР°РµС‚ РµРіРѕ, РєР°Р·Р°Р»РѕСЃСЊ, РїСЂРѕСЃС‚Рѕ РЅРµ РїСЂРѕСЏРІР»СЏР»РѕСЃСЊ.
+
+РћРґРЅР°РєРѕ СЏ СѓСЃС‚Р°Р» Рё РїРѕРЅСЏР», С‡С‚Рѕ РјРЅРµ РµС‰С‘ РЅСѓР¶РЅРѕ Р±С‹Р»Рѕ РёР·СЂСЏРґРЅРѕ РїРѕРјС‹С‚СЊ РїРѕСЃСѓРґСѓ.
+
+РЇ РІСЃС‚Р°Р».
+
+РЎРЅР°С‡Р°Р»Р° РѕРЅ РјРµРґР»РµРЅРЅРѕ РІРѕР·РІСЂР°С‰Р°Р»СЃСЏ, Р° РїРѕС‚РѕРј РІСЃС‘ СЃСЂР°Р·Сѓ. Р’ С‚РѕС‚ РјРѕРјРµРЅС‚ СЏ РїСЂРѕР»РёР» РєР°РїР»СЋ РёР»Рё РґРІРµ.
+
+РЇ РёР·РІРёРІР°Р»СЃСЏ Рё СЃСѓРµС‚РёР»СЃСЏ РїРѕ РєСѓС…РЅРµ, С‚РѕСЂРѕРїР»РёРІРѕ Р·Р°РіСЂСѓР¶Р°СЏ Рё РІС‹РіСЂСѓР¶Р°СЏ РїРѕСЃСѓРґРѕРјРѕРµС‡РЅСѓСЋ РјР°С€РёРЅСѓ Рё СѓР±РёСЂР°СЏ РІРµС‰Рё. РЎРїРѕС…РІР°С‚РёРІС€РёСЃСЊ Рё СЃС…РІР°С‚РёРІС€РёСЃСЊ Р·Р° РїР°С…, СѓРјРѕР»СЏСЏ РЅРµ РёРґС‚Рё! РњРЅРµ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ РЅРµ С…РѕС‚РµР»РѕСЃСЊ РјС‹С‚СЊ РїРѕР»С‹, Р° РїРѕС‚РѕРј Р±РµСЃРїРѕРєРѕРёС‚СЊСЃСЏ Рѕ РІРѕР·РјРѕР¶РЅС‹С… РїСЏС‚РЅР°С… РЅР° РїР»РёС‚РєРµ.
+
+Рљ СЃС‡Р°СЃС‚СЊСЋ, РЅР°РєРѕРЅРµС†-С‚Рѕ СЏ Р·Р°РєРѕРЅС‡РёР» СѓР±РѕСЂРєСѓ. РЇ РѕС‚С‡Р°СЏРЅРЅРѕ РІРѕР·РёР»СЃСЏ СЃ РІС‹РєР»СЋС‡Р°С‚РµР»СЏРјРё, РїС‹С‚Р°СЏСЃСЊ РІС‹РєР»СЋС‡РёС‚СЊ РІСЃРµ РѕРіРЅРё, СЏ Р±РµРіР°Р» РІРѕРєСЂСѓРі, Р·Р°РїРёСЂР°СЏ РІСЃРµ РґРІРµСЂРё, РїСЂРѕР»РёРІ РµС‰С‘ РѕРґРЅСѓ РёР»Рё РѕРєРѕР»Рѕ С‚РѕРіРѕ РєР°РїР»СЋ, РєРѕРіРґР° РїС‹С‚Р°Р»СЃСЏ Р·Р°РїРµСЂРµС‚СЊ РґРІРµСЂРё.
+
+Р—Р°С‚РµРј СЏ Р±РµР¶Р°Р», РґРµСЂР¶Р°СЃСЊ Р·Р° РїР°С…, РІСЃСЋ РґРѕСЂРѕРіСѓ РІРІРµСЂС… РїРѕ Р»РµСЃС‚РЅРёС†Рµ.
+
+РЇ Р±С‹Р» РІС‹С€Рµ 10/10.
+
+РЇ РЅРµ РґСѓРјР°Р», СЏ СЃС…РІР°С‚РёР» РґРІР° РїРѕР»РѕС‚РµРЅС†Р°, СЃР»РѕР¶РёР» РёС… С‚Р°Рє Р±С‹СЃС‚СЂРѕ, РєР°Рє С‚РѕР»СЊРєРѕ РјРѕРі, Рё Р±СЂРѕСЃРёР» РЅР° РєСЂРѕРІР°С‚СЊ.
+
+РЇ СЃРѕСЂРІР°Р» СЃ СЃРµР±СЏ СЃР»РµРіРєР° РІР»Р°Р¶РЅС‹Рµ С‚СЂСѓСЃС‹ Рё РЅР°РєР»РѕРЅРёР»СЃСЏ РЅР°Рґ РїРѕР»РѕС‚РµРЅС†Р°РјРё РїРѕ-СЃРѕР±Р°С‡СЊРё, Р·Р°РґСЂР°РІ Р·Р°Рґ РІ РІРѕР·РґСѓС… Рё РѕС‚С‡Р°СЏРЅРЅРѕ СѓРґРµСЂР¶РёРІР°СЏвЂ¦
+
+вЂ¦ РЇ РїРѕР»РЅРѕСЃС‚СЊСЋ РїРѕС‚РµСЂСЏР»СЃСЏ.
+
+РџСЂСЏРјРѕ РІ РїРѕР»РѕС‚РµРЅС†Р°. Р§РµСЂРµР· 8 СЃР»РѕС‘РІ РјР°С…СЂРѕРІРѕР№ С‚РєР°РЅРё Рё РґР°Р¶Рµ РЅРµРјРЅРѕРіРѕ РІ РїСЂРѕСЃС‚С‹РЅРё. РЇ РјРµРґР»РµРЅРЅРѕ РїРѕС‚С‘СЂ СЃРµР±СЏ РІР·Р°Рґ Рё РІРїРµСЂС‘Рґ, С‡СѓРІСЃС‚РІСѓСЏ, РєР°Рє С‚С‘РїР»Р°СЏ РјРѕС‡Р° РІС‹С‚РµРєР°РµС‚ Рё РїР»РµС‰РµС‚СЃСЏ РІ РїРѕР»РѕС‚РµРЅС†Р°, РёСЃРїРѕР»СЊР·СѓСЏ РЅРµРјРЅРѕРіРѕ РµС‘, С‡С‚РѕР±С‹ СЃРјР°Р·Р°С‚СЊ СЃРµР±СЏ.
+
+РЇ РїСЂРѕРґРµСЂР¶Р°Р»СЃСЏ, РєР°Рє РјРЅРµ РїРѕРєР°Р·Р°Р»РѕСЃСЊ, С†РµР»С‹С… 2 РјРёРЅСѓС‚С‹. Р¦РµР»С‹С… 120 СЃРµРєСѓРЅРґ. Р­С‚Рѕ Р±С‹Р» РѕРґРёРЅ РёР· С‚РµС… СЃР»СѓС‡Р°РµРІ, РєРѕРіРґР° РѕРЅР° РїСЂРѕСЃС‚Рѕ РїСЂРѕРґРѕР»Р¶Р°Р»Р° РІС‹С‚РµРєР°С‚СЊ, РґР°Р¶Рµ РµСЃР»Рё РІС‹ РјРѕРіР»Рё РїРѕРґСѓРјР°С‚СЊ, С‡С‚Рѕ Р·Р°РєРѕРЅС‡РёР»Рё.
+
+РЇ РЅРµ Р±С‹Р» С‚Р°Рє РІРѕР·Р±СѓР¶РґС‘РЅ РјРµСЃСЏС†Р°РјРё РёР»Рё РґР°Р¶Рµ РіРѕРґР°РјРё.
+
+РЎРЅР°С‡Р°Р»Р° СЏ РјРµРґР»РµРЅРЅРѕ Рё РЅРµР¶РЅРѕ РЅР°С‡Р°Р» РјР°СЃС‚СѓСЂР±РёСЂРѕРІР°С‚СЊ. Р—Р°С‚РµРј СЏ РїРѕР·РІРѕР»РёР» СЃРІРѕРµР№ СЃРјР°Р·Р°РЅРЅРѕР№ РєРѕР¶Рµ Рё РїР°Р»СЊС†Р°Рј Р±С‹СЃС‚СЂРѕ, РЅРѕ РІСЃС‘ РµС‰С‘ РЅРµР¶РЅРѕ, СЃРєРѕР»СЊР·РёС‚СЊ РїРѕ РјРѕРµР№ РіРѕР»РѕРІРєРµ, С‡С‚РѕР±С‹ РјР°РєСЃРёРјРёР·РёСЂРѕРІР°С‚СЊ РѕС‰СѓС‰РµРЅРёСЏ. РњРѕР№ РїСЂРµСЃСЃ СЃРёР»СЊРЅРѕ РЅР°РїСЂСЏРіР°Р»СЃСЏ СЃ РєР°Р¶РґС‹Рј РЅРµСЃРєРѕР»СЊРєРёРјРё С‚РѕР»С‡РєР°РјРё.
+
+РќРёРєР°РєРёС… РІРёРґРµРѕ. РќРёРєР°РєРѕРіРѕ Р·РІСѓРєР°. РќРёС‡РµРіРѕ.
+
+РџСѓСЃС‚РѕР№ РґРѕРјвЂ¦ РЅРёС‡РµРіРѕ, РєСЂРѕРјРµ РјРµРЅСЏ Рё РјРѕРёС… СЃС‚РѕРЅРѕРІвЂ¦
+
+РћР±С‹С‡РЅРѕ СЏ РЅРµ СЃС‚РѕРЅСѓ СЃР»РёС€РєРѕРј РјРЅРѕРіРѕ. РЇ РґРµР»Р°СЋ РЅРµРјРЅРѕРіРѕ, РЅРѕ РїРѕС‡С‚Рё РЅРёС‡РµРіРѕ С‡СЂРµР·РјРµСЂРЅРѕРіРѕ.
+
+РќРѕ РІ СЌС‚РѕС‚ СЂР°Р·вЂ¦ Рѕ, СЏ СЌС‚Рѕ СЃРґРµР»Р°Р».
+
+Р’СЃС‘ РµС‰С‘ РЅР°С…РѕРґСЏСЃСЊ РІ РїРѕР·Рµ РґРѕРіРіРё-СЃС‚Р°Р№Р», Р”Р¶РµР№ Р±С‹СЃС‚СЂРѕ СЃС…РІР°С‚РёР» РїРѕРґСѓС€РєСѓ РїРµСЂРµРґРѕ РјРЅРѕР№, СЏ Р±С‹Р» С‚Р°Рє Р±Р»РёР·РєРѕ. РЇ РїСЂРѕРґРѕР»Р¶Р°Р» Рё РїСЂРѕРґРѕР»Р¶Р°Р». Р’РµСЃСЊ СЃС‚СЂРµСЃСЃ, РІСЃРµ С‚СЂСѓРґРЅРѕСЃС‚Рё РІ СЃРѕС‡РµС‚Р°РЅРёРё СЃ РѕРіСЂРѕРјРЅРѕР№ РїРѕС‚СЂРµР±РЅРѕСЃС‚СЊСЋ РІ СЌС‚РѕРј РјРѕРјРµРЅС‚Рµ -
+
+РЇ РєРѕРЅС‡РёР»вЂ¦ С‚Р°Рє СЃРёР»СЊРЅРѕ. РџСЂСЏРјРѕ РІ С‚Рµ Р¶Рµ РїРѕР»РѕС‚РµРЅС†Р°.
+
+РЇ СЃС‚РѕРЅР°Р» С‚Р°Рє РіСЂРѕРјРєРѕ, С‡С‚Рѕ СѓС‚РєРЅСѓР»СЃСЏ Р»РёС†РѕРј РІ РїРѕРґСѓС€РєСѓ, Р±С‹СЃС‚СЂРѕ РґС‹С€Р°, Р° РјРѕС‘ СЃРµСЂРґС†Рµ РєРѕР»РѕС‚РёР»РѕСЃСЊ.
+
+РЇ С‡СѓРІСЃС‚РІРѕРІР°Р», С‡С‚Рѕ РІ РєР°РєРѕРј-С‚Рѕ СЃРјС‹СЃР»Рµ СЏ СЂСѓС…РЅСѓР».
+
+РњРЅРµ СЌС‚Рѕ Р±С‹Р»Рѕ РѕС‚С‡Р°СЏРЅРЅРѕ РЅСѓР¶РЅРѕ.
+
+Р’СЃС‘вЂ¦ СЌС‚Рѕ.
+
+Р—Р°С‚РµРј СЏ Р±С‹СЃС‚СЂРѕ СЃРјРµРЅРёР»Р° РїСЂРѕСЃС‚С‹РЅРё (СЏ РІРѕРѕР±С‰Рµ-С‚Рѕ РїР»Р°РЅРёСЂРѕРІР°Р»Р° СЌС‚Рѕ СЃРґРµР»Р°С‚СЊ), РїРѕР»РѕР¶РёР»Р° РІСЃС‘ РІ СЃС‚РёСЂР°Р»СЊРЅСѓСЋ РјР°С€РёРЅСѓ Рё Р»РµРіР»Р° СЃРїР°С‚СЊвЂ¦ РІСЂРµРјСЏ РѕС‚ РІСЂРµРјРµРЅРё СЂР°Р·РјС‹С€Р»СЏСЏ Рѕ РїСЂРµРєСЂР°СЃРЅРѕР№ РїСѓСЃС‚РѕС‚Рµ, РєРѕС‚РѕСЂСѓСЋ СЏ С‡СѓРІСЃС‚РІРѕРІР°Р»Р° С„РёР·РёРѕР»РѕРіРёС‡РµСЃРєРё.
+
+###
+
+РќР°РґРµСЋСЃСЊ, РІР°Рј РїРѕРЅСЂР°РІРёР»РѕСЃСЊ СЌС‚Рѕ С‡РёС‚Р°С‚СЊ. РЇ РЅР°РґРµСЋСЃСЊ, С‡С‚Рѕ РІС‹ РІСЃС‘ РІС‹РЅРµСЃРµС‚Рµ РёР· СЌС‚РѕРіРѕ, РЅРµСЃРјРѕС‚СЂСЏ РЅР° РїСЂРµРєСЂР°СЃРЅРѕРµ РІСЂРµРјСЏ (РІС‹ РїРѕРЅРёРјР°РµС‚Рµ, Рѕ С‡С‘Рј СЏ), С‡С‚Рѕ РЅСѓР¶РЅРѕ Р·Р°Р±РѕС‚РёС‚СЊСЃСЏ Рѕ СЃРµР±Рµ. Р–РёР·РЅСЊ РјРѕР¶РµС‚ Р±С‹С‚СЊ РѕС‡РµРЅСЊ С‚СЏР¶С‘Р»РѕР№, Рё, С‡РµСЃС‚РЅРѕ РіРѕРІРѕСЂСЏ, РІРѕР·РјРѕР¶РЅРѕСЃС‚СЊ РїРѕР·РІРѕР»РёС‚СЊ СЃРµР±Рµ РІРµСЂРЅСѓС‚СЊСЃСЏ Рє С‚РѕРјСѓ, С‡С‚Рѕ Р·Р°СЃС‚Р°РІР»СЏРµС‚ РІР°СЃ С‡СѓРІСЃС‚РІРѕРІР°С‚СЊ СЃРµР±СЏ С…РѕСЂРѕС€Рѕ, РјРѕР¶РµС‚ Р±С‹С‚СЊ РѕС‡РµРЅСЊ РїРѕР»РµР·РЅР° РґР»СЏ РІР°С€РµРіРѕ Р·РґРѕСЂРѕРІСЊСЏ.
+
+1 С€Р°Рі РЅР°Р·Р°Рґ, С‡С‚РѕР±С‹ СЃРґРµР»Р°С‚СЊ 2 С€Р°РіР° РІРїРµСЂС‘Рґ.
+
+РќР°РґРµСЋСЃСЊ, Сѓ РІР°СЃ Р±СѓРґРµС‚ РїСЂРµРєСЂР°СЃРЅС‹Р№ РґРµРЅСЊ, Рё СЏ РЅР°РґРµСЋСЃСЊ, С‡С‚Рѕ СЃРєРѕСЂРѕ РЅР°РїРёС€Сѓ РґР»СЏ РІР°СЃ РµС‰С‘ РѕРґРЅСѓ РёСЃС‚РѕСЂРёСЋ. РџРѕР¶Р°Р»СѓР№СЃС‚Р°, РµСЃР»Рё Сѓ РІР°СЃ РµСЃС‚СЊ РєР°РєРёРµ-С‚Рѕ РёРґРµРё, РєРѕС‚РѕСЂС‹Рµ СЏ РјРѕРіСѓ РїРѕРїСЂРѕР±РѕРІР°С‚СЊ (Рё РїРѕС‚РѕРј РїСЂРѕРґРѕР»Р¶РёС‚СЊ РїРёСЃ%С‚СЊ), РїРѕР¶Р°Р»СѓР№СЃС‚Р°, РґР°Р№С‚Рµ РјРЅРµ Р·РЅР°С‚СЊ. РЇ РІСЃРµРіРґР° РёС‰Сѓ СЃРїРѕСЃРѕР±С‹ СѓСЃРёР»РёС‚СЊ СЃРІРѕРё РїРµСЂРµР¶РёРІР°РЅРёСЏ РѕРјРѕ. РњР°С‚РµСЂРёР°Р»С‹ РІ РґСѓС…Рµ С‚РѕРіРѕ, С‡С‚Рѕ СЏ СѓР¶Рµ РЅР°РїРёСЃ%Р»Р°, РґР°РґСѓС‚ РІР°Рј РїСЂРµРґСЃС‚Р°РІР»РµРЅРёРµ Рѕ С‚РѕРј, С‡С‚Рѕ РјРЅРµ РЅСЂР°РІРёС‚СЃСЏ.
+
+Р”Рѕ СЃР»РµРґСѓСЋС‰РµРіРѕ СЂР°Р·Р°, СЂРµР±СЏС‚Р° ??
 
