--- a/NoahEdar0483/96766-mitsuri-pee-desperation--demon-slayer-nsfw-story/rus.textile
+++ b/NoahEdar0483/96766-mitsuri-pee-desperation--demon-slayer-nsfw-story/rus.textile
@@ -1,4 +1,4 @@
-Mitsuri's Pee Desperation — Demon Slayer NSFW Story
+Отчаяние Мицури в мочеиспускании — Demon Slayer NSFW Story
 
 Автор: NoahEdar0483
 
