Update and rename nononono/78372-lucys-unfortunate-day/rus.textile to nononono/78372-lucys-unfortunate-day/f/rus.textile

--- a/nononono/78372-lucys-unfortunate-day/f/rus.textile
+++ b/nononono/78372-lucys-unfortunate-day/f/rus.textile
@@ -4,7 +4,7 @@
 
 *000*2022-06-18 15:36
 
-Пустой
+Пусто...
 
 Глаза Люси закатились к небу. И снова её сон был прерван мочевым пузырём, готовым лопнуть. Она громко вздохнула, когда её тело громко выпустило накопившуюся за восемь часов мочу, её водопад сопровождался шумным шипением, которое угрожало разбудить её соседей по квартире, спящих по соседству. Вытирая свою аккуратно подстриженную письку, она проверила Google Maps на наличие пробок. Всё чисто. Учебный семестр закончился, и пока её несносные, богатые соседи по квартире, почти наверняка принадлежавшие к консерваторам, гуляли каждую ночь, Люси подрабатывала наблюдателем в соседней школе, пытаясь получить дополнительные деньги. В ту ночь, когда Джордж и Лиза разбудили её четвёртую ночь подряд, громко трахаясь в 3 часа ночи, Люси ещё раз задалась вопросом, почему университет решил поставить её в пару с шестью соседями по квартире, которые не могли быть более далеки друг от друга с точки зрения личности, ценностей и образ жизни.
 
